FFB v2: component telemetry, synths & Simagic
Major feel overhaul and protocol v2: switch from scalar torque to per-substep TelemetryFrame (SAT, differential texture, speed, slip, μ, RPM) and move composition client-side. Add synths (SurfaceTexture, DrivetrainRumble), understeer trail collapse, adaptive playback delay, commissioning test-signals, and richer FfbTuning (speed-scaling, parking boost, texture/rumble gains, playbackDelayMs). Input/usability: pedal binding/composition (bridge steering + GLFW pedals), InputBindings hot-reload, per-block FFB_TRIM, new HUD fields, new commissioning schematic (simwheel_feature_track) and pre-linked front mounts. Wire/protocol: AWFB v2 (HELLO includes range, STATE gains FLAG_ARMED); sidecar updated to match (coalesced per-tick writes, 200ms arming ramp, --max-slew, armed visibility, improved re-acquire/rate/logging). Backends: DirectInput/evdev rated-torque resolution, autocenter gating and re-acquire robustness, event-timestamp velocity for evdev. Tests, gametests, docs and tooling updated to exercise and document changes.